@@ -1,3 +1,9 @@
+2003-06-05  Luke Dunstan  <infidel@users.sourceforge.net>
+
+	* include/winuser.h (WNDCLASS[AW], WNDCLASSEX[AW]): Change type of
+	hInstance members to HINSTANCE.
+	Thanks to: Brenden T. <brenden@rcsis.com>
+
 2003-06-05  Bart Oldeman  <bartoldeman@users.sourceforge.net>
 
 	* include/lmaccess.h (UF_MNS_LOGON_ACCOUNT): Add define.
